--- a/experiment.kv
+++ b/experiment.kv
@@ -44,7 +44,7 @@
             id:subject_id
             padding_x: self.width/3
             padding_y: ( self.height - self.line_height ) / 2
-            text:"subject_id"
+            text:"0"
             font_size:20
             color:0,0,0,1
     BoxLayout:
