raw setup is working

--- a/experiment.kv
+++ b/experiment.kv
@@ -60,6 +60,8 @@
 
 <Experiment_screen>:
     kinect_status_id: kinect_status_id
+    state_text_input: state_text_input
+    next_button: next_button
     orientation:'vertical'
     BoxLayout:
         size_hint_y:0.3
@@ -70,8 +72,7 @@
             background_color:1,0,0,1
             font_size:15
             bold: True
-            on_press: self.background_color = (0.5,0.5,0,1)
-            on_release: app.btn_released(self, app.stop_experiment)  # function to be called when button is pressed
+            on_press: app.exit_experiment()
 
         Label:
             padding_x: self.width/3
@@ -81,8 +82,6 @@
             font_size:30
             color:0,0,0,1
 
-
-
     BoxLayout:
         size_hint_y:0.3
         Label:
@@ -91,11 +90,11 @@
             color:0,0,0,1
             bold: True
 
-        Label:
-            text:"5"
+        TextInput:
+            id: state_text_input
+            text: "0"
             font_size:20
             color:0,0,0,1
-            bold: True
 
     BoxLayout:
         orientation: 'horizontal'
@@ -112,8 +111,7 @@
                 text: 'Kinect'
                 font_size:20
                 color:0,0,0,1
-                bold: True
-            Label:
+            Label
                 id: kinect_status_id
                 text: 'unknown'
                 font_size:20
@@ -123,12 +121,13 @@
     BoxLayout:
         size_hint_y:0.3
         Button:
+            id: next_button
             text:"Next"
             color:0,0,0,1
             font_size:30
             bold: True
             on_press: app.next_epoch()
-            on_release: app.btn_released(self, app.goto_main)  # function to be called when button is pressed
+            #on_release: app.btn_released(self, app.goto_main)  # function to be called when button is pressed
 
     BoxLayout:
         size_hint_y:0.1
